# publication-analytics

./: README.md  pyproject.toml
Code/: compile_pubmed.py  pubmed_affil_search.py  pubmed_affil_search_update.py  run_pubmedsearch_cron.plist
Code/.ipynb_checkpoints/: basic_analytics-checkpoint.ipynb  monthly_business_review-checkpoint.ipynb  pubmed_curation-checkpoint.ipynb
Code/DEPRECATED/: pubmed_affil_search.py
Code/Notebooks/: compare_pts_and_pubmed.ipynb  pubmed_curation.ipynb  scratch.ipynb
Code/Notebooks/.ipynb_checkpoints/: pubmed_curation-checkpoint.ipynb
Data/PTS_versions/: PTS_archive_01_06_21.tsv  PTS_archive_01_18_22.tsv  PTS_archive_03_25_22.tsv  PTS_archive_06_21_2021.tsv  PTS_archive_09_23_2021.tsv  PTS_archive_10_04_21.tsv  PTS_archive_12_29_21.tsv
Data/search_filters/: tempus_removal.txt
Results/: pubmed_not_pts.tsv  tempus.tsv
